# Paraconsistent_HoTT_LLM-Lean-Bridge

./: .gitignore  AUDIT_REPORT_RETAIL_HARDENING.md  CHANGELOG.md  MANIFEST.in  NOTICE  NOTICE.md  PATCH_NOTES_V25_4.md  PATCH_NOTES_V25_5.md  PATCH_NOTES_V25_6.md  PATCH_NOTES_V25_6_RETAIL_HARDENING.md  PATCH_NOTES_V25_7.md  PATCH_NOTES_V25_8.md  README.md  SECURITY.md  pyproject.toml  sbom.spdx.json
shadowproof_bridge_v25_6_release_artifact_clean/: CHANGELOG.md  LICENSE  MANIFEST.in  PATCH_NOTES_V25_2.md  PATCH_NOTES_V25_3.md  README.md  SECURITY.md  pyproject.toml
shadowproof_bridge_v25_6_release_artifact_clean/deploy/: docker-compose.yml  prometheus.yml
shadowproof_bridge_v25_6_release_artifact_clean/docs/: ACTIVE_LEARNING_LOOP.md  EVAL_HARNESS.md  FRONTIER_MODEL_BRIDGE.md  LEARNING_LAYER.md  OPENAI_NATIVE_TOOL.md  REPAIR_PROMPTS.md
shadowproof_bridge_v25_6_release_artifact_clean/mcp/: README.md  server.ts  tsconfig.json
shadowproof_bridge_v25_6_release_artifact_clean/schemas/: shadowproof_compile_repair_prompt.input.schema.json  shadowproof_env_info.input.schema.json  shadowproof_list_domains.input.schema.json  shadowproof_local_behavior_simulation.input.schema.json  shadowproof_optimization.input.schema.json  shadowproof_pilot_plan.input.schema.json  shadowproof_record_outcome.input.schema.json  shadowproof_retrieve_mathlib.input.schema.json  shadowproof_shadowhott_state.input.schema.json
shadowproof_bridge_v25_6_release_artifact_clean/scripts/: mock_lean.py
shadowproof_bridge_v25_6_release_artifact_clean/shadowproof_core/: __init__.py  acquisition.py  (+32 more)
(+152 files in other folders)
