[project]
name = "shadowproof-bridge"
version = "0.25.6"
description = "Frontier-model-to-Lean bridge with J-conserved ShadowHoTT bilattice state semantics and retrieval-augmented repair"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.18"]

[project.optional-dependencies]
prod = [
  "uvicorn>=0.29",
  "psycopg[binary]>=3.1",
  "redis>=5.0",
  "PyJWT[crypto]>=2.8",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp>=1.24"
]
dev = ["pytest>=8"]

[project.scripts]
shadowproof = "shadowproof_core.cli:main"

[tool.setuptools.packages.find]
include = ["shadowproof_core*"]

[tool.setuptools.package-data]
shadowproof_core = ["py.typed", "schemas/*.json"]
